--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,14 @@ vignettes/*.pdf
 .Renviron
 
 # pkgdown site
-docs/
+#docs/
 
 # translation temp files
 po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+#data
+data/gbr_area_sst_2020_2023.nc
+data/gbr_daily_temp.tif*
